@@ -1,3 +1,5 @@
+2025-12-09
+    Fixed currency determine
 2025-12-04
     Added invapi errors handle
 2025-11-17
